# ultimatecompressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  error.h  main.c
core/: CMakeLists.txt  archive.h  archive_rar.c  archive_s7z.c  archive_tar.c  archive_zip.c  build.h  build.h.in  error.c  error.h  macro.h  method.c  method.h  mode.c  mode.h  mode_compress.c  mode_decompress.c  ultimatecompressor.h
deps-zip/: miniz.c  miniz.h  zip.c
gui/: AbstractDialog.vala  Action.vala  Application.vala  Archive.vala  ArrayList.vala  CMakeLists.txt  Callback.vala  DialogAction.vala  FileListBoxRow.vala  FormatDialog.vala  UltimateCompressor.vala  Window.vala  dialog_format.css  dialog_format.glade  dialog_format.gresource.xml  main.c  res.gresource.xml  window.gresource.xml  window.ui
